# pikaia

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  realistic_fitness_values.py  requirements.txt
.github/: dependabot.yml
.github/scripts/: check_pypi_version.py  check_version.py
.github/workflows/: ci.yml  publish.yml
artefacts/: advanced_genetic_results.json  current_results.json  fair_comparison_results.json  improved_genetic_results.json  improved_genetic_results_v2.json
docs/: adaptive_supervision.md  conf.py  index.rst  overview.md
examples/: README.md  arxiv_example.py  d_matrix_comparison.py  example1.py  example2.py  example3.py  example4.py  example5.py  examples.ipynb  geneticAI_hello_model.py  geneticAI_run_arxiv_examples.py  geneticAI_run_search_example.py  geneticAI_run_selfconsistency_example.py  genetic_layer.ipynb  genetic_networks.ipynb  paper_example.ipynb  paper_example.py
examples/artefacts/: genetic_layer_summary.csv
examples/genetic_adapter/: example.py
examples/genetic_attention/: ABLATION_GUIDE.txt  ABLATION_REPORT.md  README.md  download_pretraining_data.py  run_ablation.py  train_ablation.py
examples/genetic_attention/ablation_results/: ablation_results.csv  ablation_results.json
examples/genetic_attention/artefacts/: dual_encoder_genetic_results.json  dual_encoder_standard_results.json
examples/genetic_attention/utils/: smollm.py
examples/genetic_layer/: README.md  compute_summary.py
examples/genetic_layer/utils/: network_factory.py  summary_utils.py
examples/standard/: example1.py  example2.py  example4.py  example5.py  examples.ipynb  paper_example.ipynb
examples/utils/: network_factory.py  plotting_utils.py  trainer_utils.py
pikaia/config/: __init__.py  logger.py
pikaia/data/: __init__.py  population.py
pikaia/layers/: genetic_layer.py
pikaia/models/: __init__.py  danube_model.py  genetic_model.py  pikaia_model.py  pikaia_text_embedder.py
pikaia/models/backbones/: __init__.py  bert.py
pikaia/models/nn_modules/: __init__.py  genetic_layer.py  mga.py
pikaia/nn_components/: __init__.py  genetic_layer.py  mga.py
pikaia/plotting/: __init__.py  pikaia_plotter.py
pikaia/preprocessing/: __init__.py  pikaia_preprocessor.py  utils.py
pikaia/schemas/: __init__.py  preprocessing.py  strategies.py
pikaia/strategies/: __init__.py  base_strategies.py  strategy_factories.py
research/: README.md
research/hybrid_ai/: genetic_ablation_summary.md  hybrid_ai.md
src/pikaia/: search.py
tests/: conftest.py
tests/integration/: test_pipeline.py
tests/legacy/: __init__.py  alg.py  test_strategy_equivalence.py
tests/unit/: test_bert_model.py  test_genetic_layer.py  test_genetic_model.py  test_mga.py  test_pikaia_model.py  test_plotting.py  test_population.py  test_preprocessor.py  test_strategies.py  test_strategy_kernels.py  test_utils.py
(+39 files in other folders)
