[build-system]
requires = ["hatchling==1.26.3"]
build-backend = "hatchling.build"

[project]
name = "pikaia"
version = "0.1.3"
authors = [
  { name="Philipp Wissgott"},
  { name="Andreas Roschal"},
  { name="Martin Bär"},
  { name="Carlos U. Pérez Malla"},
]
description = "Data analysis with evolutionary simulation"
keywords = ["data analysis", "AI", "evolutionary simulation"]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
  "numpy>1.24.4",
  "matplotlib>=3.6.3",
  "pydantic>=2.10.6",
  "pandas>=2.3.2",
  "torch>=2.9.0",
  "torchvision>=0.24.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.13.1",
  "pytest>=8.3.5",
  "scikit-learn>=1.3.0",
]
docs = [
  "sphinx>=8.2.3",
  "sphinx-autoapi>=3.6.0",
  "myst-parser>=4.0.1",
  "sphinx-rtd-theme>=3.0.2",
]
examples = [
    "huggingface-hub>=0.26.0",
    "jupyterlab>=4.4.7",
    "ipywidgets>=8.1.7",
    "transformers>=4.46.0",
    "datasets>=3.0.0",
    "tqdm>=4.66.0",
    "pandas>=2.0.0",
    "pyarrow>=18.0.0",
    "typer>=0.20.0",
    "pytorch-lightning>=2.5.6",
    "seaborn>=0.13.2",
]

[tool.hatch.build.targets.sdist]
include = ["*.py"]
exclude = ["tmp", "examples"]

[project.urls]
Homepage = "https://github.com/danube-ai/pikaia"
Issues = "https://github.com/danube-ai/pikaia/issues"

[tool.pylint.'MESSAGES CONTROL']
max-line-length = 88
